--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div class="header__menu">
                     <div class="hamb">
                         <div class="hamb__field">
-                            <span></span>
-                            <span></span>
-                            <span></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>                                                  
                         </div>
                     </div>
                     <ul class="menu__list">
