--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="header__container container">
-                <img src="Qubly__images/QublyImage.png" alt="" class="header__logo">
+                <img src="Qubly__images/Logo.svg" alt="" class="header__logo">
                 <div class="header__menu">
                     <div class="hamb">
                         <div class="hamb__field" id="hamb">
@@ -48,7 +48,7 @@
                             <div class="first__content__info">
                                 <div class="first__content__info__links">
                                     <div class="first__content__info__links__img">
-                                        <img src="Qubly__images/edit-brightness.png" alt="">
+                                        <img src="Qubly__images/edit-brightness.svg" alt="">
                                     </div>
                                     <a href="#">v3.1 released. Learn more</a>
                                 </div>
@@ -64,7 +64,7 @@
                                 </div>
                             </div>
                             <div class="first__content__image">
-                                <img src="Qubly__images/image1.png" alt="">
+                                <img src="Qubly__images/image 1.svg" alt="">
                             </div>
                         </div>
                 </section>
@@ -75,7 +75,7 @@
                     <div class="WhyQubly__container container">
                         <div class="WhyQubly__info">
                             <div class="WhyQubly__info__tag">
-                                <img src="Qubly__images/IconAwesome-eye.png" alt="">
+                                <img src="Qubly__images/Icon awesome-eye.svg" alt="">
                                 WhyQubly
                             </div>
                             <div class="WhyQubly__info__tittle">
@@ -90,7 +90,7 @@
                                 <div class="WhyQubly__features__column">
                                     <div class="WhyQubly__features__block">
                                         <div class="features__block__icon">
-                                            <img src="Qubly__images/image3.png" alt="">
+                                            <img src="Qubly__images/chart-bar-33.svg" alt="">
                                         </div>
                                         <div class="features__block__tittle">
                                             Valuable business insights
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="WhyQubly__features__block">
                                         <div class="features__block__icon">
-                                            <img src="Qubly__images/image3.png" alt="">
+                                            <img src="Qubly__images/newsletter-dev.svg" alt="">
                                         </div>
                                         <div class="features__block__tittle">
                                             Powerful Algorithms
@@ -112,7 +112,7 @@
                                     </div>
                                     <div class="WhyQubly__features__block">
                                         <div class="features__block__icon">
-                                            <img src="Qubly__images/image4.png" alt="">
+                                            <img src="Qubly__images/timeline.svg" alt="">
                                         </div>
                                         <div class="features__block__tittle">
                                             Data in real-time
@@ -126,10 +126,11 @@
                         </div>
                     </div>
                 </section>
+                
             </div>
         </main>
         <footer class="footer">
-            выфвфы
+            
         </footer>
     </div>
 
